welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:13: error: expected class or object definition
def parcoursdiag(diag : Int, cpt : Int): Int={
^